--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "promise": "^8.3.0",
+    "randomstring": "^1.3.0",
     "sharp": "^0.32.6",
     "twilio": "^4.18.1",
     "uuid": "^9.0.1",
