--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "promise": "^8.3.0",
     "randomstring": "^1.3.0",
     "sharp": "^0.32.6",
+    "sweetalert2": "^11.7.32",
     "twilio": "^4.18.1",
     "uuid": "^9.0.1",
     "view": "^0.6.1"
